--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -2,34 +2,30 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#59FB8F"
+    android:background="#61BBFF"
     android:layout_width="match_parent"
     android:layout_height="150dp">
 
     <ImageView
+        android:id="@+id/header_imgAvatar"
         android:layout_marginTop="5dp"
         android:scaleType="centerCrop"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:src="@drawable/avatar_header" />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="-20dp"
-        android:src="@drawable/camera" />
-
     <TextView
+        android:id="@+id/header_tvDisplayName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="5dp"
         android:text="TEAM 2-2K"
         android:textSize="15sp"
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/header_tvEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
