--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
     tools:context=".fragment.Fragment_Restaurant">
 
@@ -15,4 +16,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <ListView
+        android:id="@+id/fRestaurant_lvPost"
+        android:layout_below="@+id/fRestaurant_tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fRestaurant_fabAddPost"
+        android:background="#34A8FF"
+        android:src="@drawable/add_post"
+        android:layout_marginBottom="3dp"
+        android:layout_marginRight="3dp"
+        app:fabSize="mini"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
