--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activities.RegisterActivity">
     <ImageView
-        android:id="@+id/login_imgAvatar"
+        android:id="@+id/register_imgAvatar"
         android:src="@drawable/avatar_facebook"
         android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:layout_width="100dp"
         android:layout_height="100dp"/>
     <ImageView
-        android:id="@+id/login_imgChangeAvatar"
+        android:id="@+id/register_imgChangeAvatar"
         android:src="@drawable/ic_camera_black_24dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp"
@@ -21,36 +21,36 @@
         android:layout_height="wrap_content"/>
 
     <EditText
-        android:id="@+id/login_etDisplayName"
+        android:id="@+id/register_etDisplayName"
         android:hint="Display Name"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:layout_below="@+id/login_imgAvatar"
+        android:layout_below="@+id/register_imgAvatar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <EditText
-        android:id="@+id/login_etEmail"
+        android:id="@+id/register_etEmail"
         android:hint="Email"
         android:gravity="center"
-        android:layout_below="@+id/login_etDisplayName"
+        android:layout_below="@+id/register_etDisplayName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
-        android:id="@+id/login_etPassword"
+        android:id="@+id/register_etPassword"
         android:hint="Password"
         android:gravity="center"
         android:inputType="textPassword"
-        android:layout_below="@+id/login_etEmail"
+        android:layout_below="@+id/register_etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <Button
-        android:id="@+id/login_btnRegister"
+        android:id="@+id/register_btnRegister"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/login_etPassword"
+        android:layout_below="@+id/register_etPassword"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/colorPrimary"
