--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -4,20 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp"
     tools:context=".fragment.Fragment_Restaurant">
 
     <TextView
         android:id="@+id/fRestaurant_tvTitle"
         android:text="Fragment Restaurant"
+        android:layout_marginTop="3dp"
         android:textSize="18sp"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
     <ListView
         android:id="@+id/fRestaurant_lvPost"
+        android:layout_marginTop="3dp"
         android:layout_below="@+id/fRestaurant_tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
