--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/fRestaurant_tvTitle"
-        android:text="Fragment Restaurant"
+        android:text="Ăn Uống"
         android:layout_marginTop="3dp"
         android:textSize="18sp"
         android:textStyle="bold"
