--- a/app/src/main/res/layout/raw_comment.xml
+++ b/app/src/main/res/layout/raw_comment.xml
@@ -1,43 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
+    android:layout_height="match_parent"
+    android:paddingHorizontal="5dp">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/raw_comment_imgAvatar"
+        app:civ_border_width="1dp"
+        app:civ_border_color="#FFFFFF"
+        android:layout_width="30dp"
+        android:layout_height="30dp"/>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="20dp">
-        <ImageView
-            android:id="@+id/raw_comment_imgAvatar"
-            android:background="#D1D1CE"
-            android:layout_width="20dp"
-            android:layout_height="20dp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/raw_comment_imgAvatar"
+        android:backgroundTint="#EBEBEC"
+        app:cardCornerRadius="10dp">
         <TextView
             android:id="@+id/raw_comment_tvEmail"
-            android:text="nhan@gmail.com"
-            android:layout_toRightOf="@+id/raw_comment_imgAvatar"
-            android:layout_centerVertical="true"
-            android:textSize="12sp"
-            android:layout_marginLeft="3dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:text="nhan@gmail.com"
+            android:textSize="15sp" />
+
         <TextView
             android:id="@+id/raw_comment_tvPubDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="end"
             android:text="30/03/2020 21:11"
             android:textSize="12sp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="3dp"
-            android:layout_marginLeft="3dp"
-            android:textStyle="italic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/raw_comment_tvComment"
-        android:layout_marginTop="3dp"
-        android:hint="Comment 1 2 4 5  6 7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/raw_comment_tvComment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/raw_comment_tvPubDate"
+            android:layout_marginTop="25dp"
+            android:textSize="15sp"
+            android:layout_marginHorizontal="5dp"
+            android:hint="Comment 1 2 4 5  6 7" />
 
 
-</LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
