--- a/app/src/main/res/layout/raw_content.xml
+++ b/app/src/main/res/layout/raw_content.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/raw_content_imgContent"
-        android:background="#ff0"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="120dp"/>
-
+        android:layout_height="200dp"/>
     <TextView
         android:id="@+id/raw_content_tvDescription"
         android:hint="Add Description"
