--- a/app/src/main/res/layout/fragment_censorship.xml
+++ b/app/src/main/res/layout/fragment_censorship.xml
@@ -33,6 +33,7 @@
         android:id="@+id/fCensorship_lvPost"
         android:layout_below="@+id/fCensorship_tvNumber"
         android:layout_marginTop="3dp"
+        android:dividerHeight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Button
