--- a/app/src/main/res/layout/dialog_comment_post.xml
+++ b/app/src/main/res/layout/dialog_comment_post.xml
@@ -7,11 +7,12 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/dCommentPost_tvDone"
-        android:text="Xong"
+        android:text="X"
         android:layout_alignParentRight="true"
         android:textStyle="bold"
         android:textColor="#090909"
-        android:textSize="18sp"
+        android:textSize="25sp"
+        android:layout_marginRight="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <LinearLayout
@@ -23,19 +24,20 @@
         <EditText
             android:id="@+id/dCommentPost_etComment"
             android:hint="Viết bình luận..."
-            android:layout_weight="7"
+            android:layout_weight="8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/dCommentPost_btnPost"
-            android:text="Đăng"
-            android:layout_weight="3"
+        <ImageView
+            android:id="@+id/dCommentPost_imgPost"
+            android:src="@drawable/post"
+            android:layout_weight="2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="50dp"/>
     </LinearLayout>
     <ListView
         android:id="@+id/dCommentPost_lvComment"
         android:dividerHeight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_above="@+id/dCommentPost_layoutComment"
         android:layout_below="@+id/dCommentPost_tvDone"
         android:layout_width="match_parent"
