--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="150dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/header_imgAvatar"
         android:layout_marginTop="5dp"
         android:scaleType="centerCrop"
