--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -19,111 +19,105 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <RelativeLayout
-                    android:id="@+id/fAddPost_layoutContainer"
+                    android:id="@+id/fEditPost_layoutContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp">
 
                     <LinearLayout
-                        android:id="@+id/fAddPost_layoutTitle"
+                        android:id="@+id/fEditPost_layoutTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"
-                            android:gravity="center"
-                            android:text="Địa Điểm: "
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/fAddPost_tvPlace"
+                        <AutoCompleteTextView
+                            android:id="@+id/fEditPost_acPlace"
                             android:layout_width="0dp"
+                            android:hint="Tên địa điểm"
                             android:layout_height="wrap_content"
-                            android:layout_weight="3"
+                            android:layout_weight="6"
                             android:textSize="15sp" />
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"
-                            android:gravity="center"
-                            android:text="Thể Loại: "
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/fAddPost_tvCategory"
+                        <Spinner
+                            android:id="@+id/fEditPost_spnCategory"
+                            android:hint="Tên thể loại"
+                            android:layout_marginTop="3dp"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
+                            android:layout_height="40dp"
+                            android:layout_weight="4"
                             android:textSize="15sp" />
 
                     </LinearLayout>
 
 
                     <ImageView
-                        android:id="@+id/fAddPost_imgAvatarUser"
+                        android:id="@+id/fEditPost_imgAvatarUser"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:layout_below="@+id/fAddPost_layoutTitle"
+                        android:background="#ff0"
+                        android:layout_below="@+id/fEditPost_layoutTitle"
                         android:layout_marginTop="5dp" />
 
                     <TextView
-                        android:id="@+id/fAddPost_tvUser"
+                        android:id="@+id/fEditPost_tvUser"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/fAddPost_layoutTitle"
+                        android:text="Nguyễn Trọng Nhân"
+                        android:layout_below="@+id/fEditPost_layoutTitle"
                         android:layout_marginLeft="3dp"
                         android:layout_marginTop="10dp"
-                        android:layout_toRightOf="@+id/fAddPost_imgAvatarUser"
+                        android:layout_toRightOf="@+id/fEditPost_imgAvatarUser"
                         android:textSize="12sp"
                         android:textStyle="italic" />
 
                     <TextView
-                        android:id="@+id/fAddPost_tvPubDate"
+                        android:id="@+id/fEditPost_tvPubDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/fAddPost_layoutTitle"
+                        android:layout_below="@+id/fEditPost_layoutTitle"
                         android:layout_alignParentRight="true"
                         android:layout_marginTop="10dp"
+                        android:text="20/20/2020"
                         android:textSize="12sp"
                         android:textStyle="italic" />
 
                     <ImageView
-                        android:id="@+id/fAddPost_imgPost"
+                        android:id="@+id/fEditPost_imgPost"
                         android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:layout_below="@+id/fAddPost_imgAvatarUser"
+                        android:layout_height="200dp"
+                        android:background="#ff0"
+                        android:layout_below="@+id/fEditPost_imgAvatarUser"
                         android:layout_marginTop="5dp"
                         android:scaleType="fitXY" />
 
-                    <TextView
-                        android:id="@+id/fAddPost_tvTitle"
+                    <EditText
+                        android:id="@+id/fEditPost_etTitle"
                         android:layout_width="match_parent"
+                        android:hint="Tiêu Đề"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/fAddPost_imgPost"
+                        android:layout_below="@+id/fEditPost_imgPost"
                         android:layout_marginTop="3dp"
                         android:textSize="15sp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/fAddPost_tvAddress"
+                    <EditText
+                        android:id="@+id/fEditPost_etAddress"
+                        android:hint="Địa chỉ"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/fAddPost_tvTitle"
+                        android:layout_below="@+id/fEditPost_etTitle"
                         android:layout_marginTop="3dp"
                         android:textSize="13sp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/fAddPost_tvDescription"
+                    <EditText
+                        android:id="@+id/fEditPost_etDescription"
+                        android:hint="Mô tả chi tiết"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/fAddPost_tvAddress"
+                        android:layout_below="@+id/fEditPost_etAddress"
                         android:layout_marginTop="3dp"
                         android:textSize="13sp" />
                 </RelativeLayout>
@@ -142,29 +136,16 @@
 
 
     <ListView
-        android:id="@+id/fAddPost_lvContent"
-        android:stackFromBottom="true"
+        android:id="@+id/fEditPost_lvContent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fAddPost_layoutContainer"
         android:layout_marginTop="5dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fAddPost_fabAddPost"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="3dp"
-        android:layout_marginBottom="3dp"
-        android:background="#34A8FF"
-        android:src="@drawable/add_post"
-        app:fabSize="mini" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fAddPost_fabAddContent"
+        android:id="@+id/fEditPost_fabAddContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
