--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -3,7 +3,7 @@
     <group>
         <item
             android:id="@+id/menu_drawer_Restaurant"
-            android:title="Places to Eat"/>
+            android:title="Restaurants"/>
         <item
             android:id="@+id/menu_drawer_Accommodations"
             android:title="Accommodations"/>
