--- a/app/src/main/res/layout/dialog_comment_post.xml
+++ b/app/src/main/res/layout/dialog_comment_post.xml
@@ -6,12 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:id="@+id/dCommentPost_tvDone"
-        android:text="X"
-        android:layout_alignParentRight="true"
-        android:textStyle="bold"
+        android:text="Comment"
+        android:textSize="18sp"
         android:textColor="#090909"
-        android:textSize="25sp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/dCommentPost_tvDone"
+        android:text="Done"
+        android:layout_alignParentRight="true"
+        android:textColor="#090909"
+        android:textSize="18sp"
         android:layout_marginRight="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -23,16 +29,22 @@
         android:layout_height="wrap_content">
         <EditText
             android:id="@+id/dCommentPost_etComment"
-            android:hint="Viết bình luận..."
+            android:hint="Add your comment..."
+            android:paddingHorizontal="5dp"
+            android:paddingVertical="3dp"
+            android:textSize="13sp"
+            android:gravity="top"
+            android:background="@drawable/border_tv"
             android:layout_weight="8"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="40dp"/>
         <ImageView
             android:id="@+id/dCommentPost_imgPost"
             android:src="@drawable/post"
             android:layout_weight="2"
+            android:layout_gravity="center_vertical"
             android:layout_width="0dp"
-            android:layout_height="50dp"/>
+            android:layout_height="40dp"/>
     </LinearLayout>
     <ListView
         android:id="@+id/dCommentPost_lvComment"
