--- a/app/src/main/res/layout/dialog_content_post.xml
+++ b/app/src/main/res/layout/dialog_content_post.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/dContentPost_tvDone"
-        android:text="Xong"
+        android:text="Done"
         android:layout_alignParentRight="true"
         android:textStyle="bold"
         android:textColor="#090909"
@@ -18,6 +18,8 @@
         android:layout_height="wrap_content"/>
     <ListView
         android:id="@+id/dContentPost_lvContent"
+        android:dividerHeight="10dp"
+        android:divider="@color/fui_transparent"
         android:layout_below="@+id/dContentPost_tvDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
