--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -7,6 +7,8 @@
 
    <ListView
        android:id="@+id/fPostList_lvPost"
+       android:dividerHeight="10dp"
+       android:divider="@color/fui_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
 
