--- a/app/src/main/res/layout/raw_comment.xml
+++ b/app/src/main/res/layout/raw_comment.xml
@@ -13,6 +13,7 @@
         android:layout_height="30dp"/>
 
     <androidx.cardview.widget.CardView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
