--- a/app/src/main/res/layout/raw_content.xml
+++ b/app/src/main/res/layout/raw_content.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.cardview.widget.CardView
+        app:cardCornerRadius="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:background="#050505"
+            android:layout_width="match_parent"
+            android:padding="2dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:scaleType="fitXY"
+                android:id="@+id/raw_content_imgContent"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"/>
+            <TextView
+                android:id="@+id/raw_content_tvDescription"
+                android:hint="Add Description"
+                android:layout_below="@+id/raw_content_imgContent"
+                android:background="#FFFFFF"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:id="@+id/raw_content_imgContent"
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
-    <TextView
-        android:id="@+id/raw_content_tvDescription"
-        android:hint="Add Description"
-        android:layout_below="@+id/raw_content_imgContent"
-        android:layout_marginTop="3dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
